@@ -1043,6 +1043,45 @@ For the `ConcurrentMessageListenerContainer`, the `<beanName>` part of the threa
 `n` increments each time the container is started.
 So, with a bean name of `container`, threads in this container will be named `container-0-C-1`, `container-1-C-1` etc., after the container is started the first time; `container-0-C-2`, `container-1-C-2` etc., after a stop/start.
 
+[[kafka-listener-meta]]
+===== @KafkaListener as a Meta Annotation
+
+Starting with version 2.2, you can now use `@KafkaListener` as a meta annotation.
+For example:
+
+====
+[source, java]
+----
+@Target(ElementType.METHOD)
+@Retention(RetentionPolicy.RUNTIME)
+@KafkaListener
+public @interface MyThreeConsumersListener {
+
+    @AliasFor(annotation = KafkaListener.class, attribute = "id")
+    String id();
+
+    @AliasFor(annotation = KafkaListener.class, attribute = "topics")
+    String[] topics();
+
+    @AliasFor(annotation = KafkaListener.class, attribute = "concurrency")
+    String concurrency() default "3";
+
+}
+----
+====
+
+You must alias at least one of `topics`, `topicPattern`, or `topicPartitions` (and, usually, `id` or `groupId` unless you have specified a `group.id` in the consumer factory configuration).
+
+====
+[source, java]
+----
+@MyThreeConsumersListener(id = "my.group", topics = "my.topic")
+public void listen1(String in) {
+    ...
+}
+----
+====
+
 [[class-level-kafkalistener]]
 ===== @KafkaListener on a Class
 
